# rootscripts

calib_general/: calib.C  draw_csv.C  file.csv  full.cxx  g4.csv  redraw.C
calib_general/bpx61/: bpx61.pdf:Zone.Identifier  bpx61.pptx  ~$bpx61.pptx
general/: chi2_4par_1.C  chi2_4par_2.C  chi2_4par_3.C  compare4Par.C  compare4Par_0.C  compare4Par_1.C  compareCo60.C  compareOld.C  diffCh.C  diffE.C  draw.C  drawMu.C  eRes.C  expAndSim.C  fft.C  fft1.C  fft2.C  fitBG.C  gainCo60.C  loading.C  multiComp.C  neutron_par.C  refill.C  res.C  sample.C  test.C  test1.C
important/: CMakeLists.txt  cali.text  chi2_2par_1.C  chi2_2par_2.C  demo2  demo2.C  script_compare1.C  script_compare2.C  script_compare3.C  script_compare4.C  time.C
important/calib_project/: measurement_Na22.root  measurement_ascii_Cs137.txt
important/calib_project/calib/: CMakeLists.txt  README.txt  calib.cc  coefficients.txt  macro.mac
important/calib_project/calib/source/: DataAnalyser.cc
important/demo_app/: CMakeLists.txt  README.txt  demo.C  demo.cc  macro.mac  script_compare4.C
important/demo_app/include/: ReadArgs.hh
important/demo_app_split/: CMakeLists.txt  README.txt  coefficients.txt  demo.cc  macro.mac  measurement_ascii_Cs137.txt  measurement_ascii_Na22.txt  refill_copy.C
important/demo_app_split/include/: ArgumentParser.hh  Config.hh  DataAnalyser.hh  MacroReader.hh
important/demo_app_split/source/: ArgumentParser.cc  DataAnalyser.cc  MacroReader.cc
important/demo_project/demo/: coefficients.txt  demo.cc  macro.mac
important/demo_project/demo/include/: Config.hh
important/demo_project/demo/source/: DataAnalyser.cc
neutron/: out.root  read0.C  read1.C  readNeutron.C  unpack0.C
neutron/declib/: par.txt  read1.C  read2.C
neutron_declib/: out.root
neutron_declib/declib/: DecLibTestDict.cxx  DecLibTestDict_rdict.pcm  par.txt  read2.C  unpack1.C
new_0/: test_0.C  test_0_results.root  test_1.C
